fix page overflowing on screens

--- a/src/styles/Destination.css
+++ b/src/styles/Destination.css
@@ -12,6 +12,7 @@
     "image"
     "tabs"
     "content";
+    max-width: 100vw;
 }
 
 .grid-container--destination > picture {
